# globox-rs

./: .gitignore  Cargo.toml  README.md
src/: annotation.rs  annotationset.rs  bbox.rs  cli.rs  converters.rs  coords.rs  evaluation.rs  evaluator.rs  evaluators.rs  imgsize.rs  lib.rs  main.rs  parsers.rs  path.rs  serde_records.rs
src/cli/: convert.rs  eval.rs  parse.rs
src/converters/: coco.rs  cvat.rs  folder.rs  imagenet.rs  labelme.rs  openimage.rs  txt.rs  yolo.rs
src/parsers/: coco.rs  cvat.rs  folder.rs  imagenet.rs  labelme.rs  openimage.rs  txt.rs  yolo.rs
src/serde_records/: coco.rs  imagenet.rs  labelme.rs  openimage.rs  txt.rs
