[package]
name = "globox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
imagesize = "0.10.1"
quick-xml = { version = "0.26.0", features = ["serialize"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
