[package]
name = "globox"
version = "0.1.0"
edition = "2021"
description = "Parse, convert and evaluate bounding box annotations"
authors = ["Louis Lac <lac.louis5@gmail.com"]
repository = "https://github.com/laclouis5/globox-rs/"
license = "MIT"
keywords = ["object-detection", "bounding-boxes", "annotations"]
categories = ["computer-vision", "encoding", "multimedia::images"]

[profile.release]
opt-level = 3
lto = true

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
csv = "1.1.6"
imagesize = "0.10.1"
itertools = "0.10.5"
quick-xml = { version = "0.26.0", features = ["serialize"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
shellexpand = "2.1.2"
